--- a/NFL/Views/Shared/_Layout.cshtml
+++ b/NFL/Views/Shared/_Layout.cshtml
@@ -23,6 +23,7 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Players", "Index", "Players")</li>
+                    <li>@Html.ActionLink("Stadiums", "Index", "Stadiums")</li>
                     
                 </ul>
                 @Html.Partial("_LoginPartial")
