--- a/NFL/Views/Players/Index.cshtml
+++ b/NFL/Views/Players/Index.cshtml
@@ -74,7 +74,8 @@
                             method: "DELETE",
 
                             success: function () {
-                                $("#PLAYERS").row(button.parent("tr")).remove().draw();
+
+                                button.row(button.parent("tr")).remove().draw();
                             }
 
                         });
