--- a/NFL/Views/Shared/_Layout.cshtml
+++ b/NFL/Views/Shared/_Layout.cshtml
@@ -7,6 +7,8 @@
     @Styles.Render("~/Content/css")
     @Styles.Render("~/bundles/bootstrap-datepickerCSS")
     @Scripts.Render("~/bundles/modernizr")
+    
+
 
 </head>
 <body>
@@ -24,6 +26,7 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Players", "Index", "Players")</li>
                     <li>@Html.ActionLink("Stadiums", "Index", "Stadiums")</li>
+                    <li>@Html.ActionLink("Staff", "Index", "Staffs")</li>
                     
                 </ul>
                 @Html.Partial("_LoginPartial")
@@ -37,7 +40,6 @@
             <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
         </footer>
     </div>
-
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/jqueryval")
     @Scripts.Render("~/bundles/jqueryUnobtrusiveAjax")
